<resources>
    <string name="app_name">My Health @Osteoarthritis</string>
    <string name="title_activity_phase2_2">Phase2_2</string>
    <string name="title_activity_menu">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_first_menu">FirstMenu</string>
    <string name="txt_title">ข้อมูลส่วนบุคคล</string>
    <string name="txt_gender">เพศ :</string>
    <string name="txt_birthday">วัน/เดือน/ปีเกิด :</string>
    <string name="txt_weight">น้ำหนัก (กิโลกรัม) :</string>
    <string name="txt_height">ส่วนสูง (เซนติเมตร) :</string>
    <string name="txt_back">กลับ</string>
    <string name="txt_historyknee">ประวัติการบริหารเข่า</string>
    <string name="txt_historyperson">ประวัติผู้ป่วย</string>
    <string name="txt_edithistory">แก้ไขประวัติผู้ป่วย</string>
    <string name="txt_editperson">แก้ไขประวัติ</string>
    <string name="txt_save">บันทึก</string>
    <string name="txt_manageknee">ท่าบริหารเข่า</string>
    <string name="txt_backtomenu">กลับสู่เมนูหลัก</string>
    <string name="txt_txtphase1">ระยะที่ 1</string>
    <string name="txt_txtphase2">ระยะที่ 2</string>
    <string name="txt_phase1">ระยะที่ 1</string>
    <string name="txt_selecttime">เวลา</string>
    <string name="txt_selectdate">เลือกวันที่</string>
    <string name="txt_restperiod">ระยะเวลาที่เหลือ</string>
    <string name="txt_next">ถัดไป</string>
    <string name="txt_phase2">ระยะที่ 2</string>
    <string name="txt_phase3">ระยะที่ 3</string>
    <string name="txt_phase4">ระยะที่ 4</string>
    <string name="txt_phase5">ระยะที่ 5</string>
    <string name="txt_phase6">ระยะที่ 6</string>
    <string name="txt_selectgender">เลือกเพศของคุณ</string>
    <string name="txt_selectbirthday">วัน/เดือน/ปีเกิด</string>
    <string name="txt_nextPage">หน้าถัดไป</string>
    <string name="txtName">"%s"</string>
    <string name="txtGender">%s"</string>
    <string name="txtBiryhday">%s"</string>
    <string name="txtWeight">%s"</string>
    <string name="txtHeight">%s"</string>
    <string name="txtQ1">"1. %s"</string>
    <string name="txtdateQ1">"วันที่ : %s"</string>
    <string name="txtQ2">"2. %s"</string>
    <string name="txtQ3">"3. %s"</string>
    <string name="txtQ4">"4. %s"</string>
    <string name="txtQ5">"5. %s"</string>
    <string name="txtQ6">"6. %s"</string>
    <string name="txtQ7">"7. %s"</string>
    <string name="txtQ8">"8. %s"</string>
    <string name="txt_male">ชาย</string>
    <string name="txt_female">หญิง</string>
    <string name="txt_great">ยอดเยี่ยม !!!</string>
    <string name="txt_tryit">พยายามยามต่อไปนะคะ</string>
    <string name="txt_close">ปิด</string>
    <string name="txt_seeVideo">ดูวิดีโอ</string>
    <string name="txt_totalCount">0</string>
    <string name="txt_note">หมายเหตุ :</string>
    <string name="txt_totalCountWalk">0</string>
    <string name="txt_start">เริ่มบันทึก</string>
    <string name="txt_Step1_1">กระ-ดก-เท้า</string>
    <string name="txt_Step1_2">หงาย-ชิด-ก้น</string>
    <string name="txt_Step1_3">ก้ม-แตะ-เท้า</string>
    <string name="txt_Explain1_1">ยกเท้าขึ้น-ลง 45 องศา จำนวน 10 ครั้ง</string>
    <string name="txt_Explain1_2">ค้างท่าไว้ 5-10 วินาที จำนวน 10 ครั้ง</string>
    <string name="txt_Explain1_3">ค้างท่าไว้ 5-10 วินาที จำนวน 10 ครั้ง</string>
    <string name="txt_Step2_1">กระ-ดก-เท้า</string>
    <string name="txt_Step2_2">หงาย-ชิด-ก้น</string>
    <string name="txt_Step2_3">ก้ม-แตะ-เท้า</string>
    <string name="txt_Step2_4">นั่ง-เหยียด-ค้าง</string>
    <string name="txt_Step2_5">เดิน-สี่-ขา</string>
    <string name="txt_Explain2_1">ยกเท้าขึ้น-ลง 45 องศา จำนวน 15 ครั้ง</string>
    <string name="txt_Explain2_2">ค้างท่าไว้ 5-10 วินาที จำนวน 15 ครั้ง</string>
    <string name="txt_Explain2_3">ค้างท่าไว้ 5-10 วินาที จำนวน 15 ครั้ง</string>
    <string name="txt_Explain2_4">จ้างท่าไว้ 5-10 วินาที จำนวน 15 ครั้ง</string>
    <string name="txt_Explain2_5">เดิน 10 นาที</string>
    <string name="txt_Step3_1">หงาย-ชิด-ก้น</string>
    <string name="txt_Step3_2">คว่ำ-ชิด-ก้น</string>
    <string name="txt_Step3_3">ก้ม-แตะ-เท้า</string>
    <string name="txt_Step3_4">นั่ง-เหยียด-ค้าง</string>
    <string name="txt_Step3_5">เดิน-สาม-ขา</string>
    <string name="txt_Explain3_1">ค้างท่าไว้ 5-10 วินาที จำนวน 20 ครั้ง</string>
    <string name="txt_Explain3_2">ค้างท่าไว้ 5-10 วินาที จำนวน 20 ครั้ง</string>
    <string name="txt_Explain3_3">ค้างท่าไว้ 5-10 วินาที จำนวน 20 ครั้ง</string>
    <string name="txt_Explain3_4">ค้างท่าไว้ 5-10 วินาที จำนวน 20 ครั้ง</string>
    <string name="txt_Explain3_5">เดิน 15 นาที</string>
    <string name="txt_Step4_1">หงาย-ชิด-ก้น</string>
    <string name="txt_Step4_2">คว่ำ-ชิด-ก้น</string>
    <string name="txt_Step4_3">ก้ม-แตะ-เท้า</string>
    <string name="txt_Step4_4">นั่ง-เหยียด-ค้าง</string>
    <string name="txt_Step4_5">เกาะ-ย่อ-ลง</string>
    <string name="txt_Step4_6">เดิน-สอง-ขา</string>
    <string name="txt_Explain4_1">ค้างท่าไว้ 5-10 วินาที จำนวน 25 ครั้ง</string>
    <string name="txt_Explain4_2">ค้างท่าไว้ 5-10 วินาที จำนวน 25 ครั้ง</string>
    <string name="txt_Explain4_3">ค้างท่าไว้ 5-10 วินาที จำนวน 25 ครั้ง</string>
    <string name="txt_Explain4_4">ค้างท่าไว้ 5-10 วินาที จำนวน 25 ครั้ง</string>
    <string name="txt_Explain4_5">ค้างท่าไว้ 5-10 วินาที จำนวน 25 ครั้ง</string>
    <string name="txt_Explain4_6">เดิน 15 นาที</string>
    <string name="txt_Step5_1">หงาย-ชิด-ก้น</string>
    <string name="txt_Step5_2">คว่ำ-ชิด-ก้น</string>
    <string name="txt_Step5_3">ก้ม-แตะ-เท้า</string>
    <string name="txt_Step5_4">นั่ง-เหยียด-ค้าง</string>
    <string name="txt_Step5_5">เกาะ-ย่อ-ลง</string>
    <string name="txt_Step5_6">เดิน-สอง-ขา</string>
    <string name="txt_Explain5_1">ค้างท่าไว้ 5-10 วินาที จำนวน 25-30 ครั้ง</string>
    <string name="txt_Explain5_2">ค้างท่าไว้ 5-10 วินาที จำนวน 25-30 ครั้ง</string>
    <string name="txt_Explain5_3">ค้างท่าไว้ 5-10 วินาที จำนวน 25-30 ครั้ง</string>
    <string name="txt_Explain5_4">จ้างท่าไว้ 5-10 วินาที จำนวน 25-30 ครั้ง</string>
    <string name="txt_Explain5_5">ค้างท่าไว้ 5-10 วินาที จำนวน 25-30 ครั้ง</string>
    <string name="txt_Explain5_6">เดิน 20-25 นาที</string>
    <string name="txt_Step6_1">หงาย-ชิด-ก้น</string>
    <string name="txt_Step6_2">คว่ำ-ชิด-ก้น</string>
    <string name="txt_Step6_3">ก้ม-แตะ-เท้า</string>
    <string name="txt_Step6_4">นั่ง-เหยียด-ค้าง</string>
    <string name="txt_Step6_5">เกาะ-ย่อ-ลง</string>
    <string name="txt_Step6_6">เดิน-สอง-ขา</string>
    <string name="txt_Explain6_1">ค้างท่าไว้ 5-10 วินาที จำนวน 30 ครั้ง</string>
    <string name="txt_Explain6_2">ค้างท่าไว้ 5-10 วินาที จำนวน 30 ครั้ง</string>
    <string name="txt_Explain6_3">ค้างท่าไว้ 5-10 วินาที จำนวน 30 ครั้ง</string>
    <string name="txt_Explain6_4">ค้างท่าไว้ 5-10 วินาที จำนวน 30 ครั้ง</string>
    <string name="txt_Explain6_5">ค้างท่าไว้ 5-10 วินาที จำนวน 30 ครั้ง</string>
    <string name="txt_Explain6_6">เดิน 30 นาที</string>
    <string name="txt_Explain">คำอธิบาย :</string>
    <string name="title_activity_menu2">MenuActivity2</string>
    <string name="title_activity_menu_frag"></string>
    <string name="txt_edithis">แก้ไขประวัติ</string>
    <string name="format_IdCount">ครั้งที่ : %d</string>
    <string name="date1">%s</string>
    <string name="time1">%s</string>
    <string name="number1_1">%s</string>
    <string name="note1_1">%s</string>
    <string name="number1_2">%s</string>
    <string name="note1_2">%s</string>
    <string name="number1_3">%s</string>
    <string name="note1_3">%s</string>
    <string name="txt_count">ครั้ง</string>
    <string name="txt_add">เริ่มบันทึก</string>
    <string name="txt_name">ชื่อ-นามสกุล :</string>
    <string name="action_about">เกี่ยวกับ</string>
    <string name="date2">%s</string>
    <string name="time2">%s</string>
    <string name="number2_1">%s</string>
    <string name="note2_1">%s</string>
    <string name="number2_2">%s</string>
    <string name="note2_2">%s</string>
    <string name="number2_3">%s</string>
    <string name="note2_3">%s</string>
    <string name="number2_4">%s</string>
    <string name="note2_4">%s</string>
    <string name="number2_5">%s</string>
    <string name="note2_5">%s</string>
    <string name="format_IdCount2">ครั้งที่ : %d</string>
    <string name="date3">%s</string>
    <string name="time3">%s</string>
    <string name="number3_1">%s</string>
    <string name="note3_1">%s</string>
    <string name="number3_2">%s</string>
    <string name="note3_2">%s</string>
    <string name="number3_3">%s</string>
    <string name="note3_3">%s</string>
    <string name="number3_4">%s</string>
    <string name="note3_4">%s</string>
    <string name="number3_5">%s</string>
    <string name="note3_5">%s</string>
    <string name="format_IdCount3">ครั้งที่ : %d</string>
    <string name="date4">%s</string>
    <string name="time4">%s</string>
    <string name="number4_1">%s</string>
    <string name="note4_1">%s</string>
    <string name="number4_2">%s</string>
    <string name="note4_2">%s</string>
    <string name="number4_3">%s</string>
    <string name="note4_3">%s</string>
    <string name="number4_4">%s</string>
    <string name="note4_4">%s</string>
    <string name="number4_5">%s</string>
    <string name="note4_5">%s</string>
    <string name="number4_6">%s</string>
    <string name="note4_6">%s</string>
    <string name="format_IdCount4">ครั้งที่ : %d</string>
    <string name="date5">%s</string>
    <string name="time5">%s</string>
    <string name="number5_1">%s</string>
    <string name="note5_1">%s</string>
    <string name="number5_2">%s</string>
    <string name="note5_2">%s</string>
    <string name="number5_3">%s</string>
    <string name="note5_3">%s</string>
    <string name="number5_4">%s</string>
    <string name="note5_4">%s</string>
    <string name="number5_5">%s</string>
    <string name="note5_5">%s</string>
    <string name="number5_6">%s</string>
    <string name="note5_6">%s</string>
    <string name="format_IdCount5">ครั้งที่ : %d</string>
    <string name="date6">%s</string>
    <string name="time6">%s</string>
    <string name="number6_1">%s</string>
    <string name="note6_1">%s</string>
    <string name="number6_2">%s</string>
    <string name="note6_2">%s</string>
    <string name="number6_3">%s</string>
    <string name="note6_3">%s</string>
    <string name="number6_4">%s</string>
    <string name="note6_4">%s</string>
    <string name="number6_5">%s</string>
    <string name="note6_5">%s</string>
    <string name="number6_6">%s</string>
    <string name="note6_6">%s</string>
    <string name="format_IdCount6">ครั้งที่ : %d</string>

</resources>
