<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF0">

    <LinearLayout
        android:id="@+id/activity_phase2_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/txt_phase2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Step2_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Explain2_1"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="75dp"
            android:layout_marginTop="75dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_delete2_1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_delete"
                android:onClick="countDE"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/number2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/txt_totalCount"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_button"
                android:textStyle="bold" />

            <Button

                android:id="@+id/btn_plus2_1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_plus"
                android:onClick="countIN"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_note"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editText_note2_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="กรอกสาเหตุที่ทำได้ไม่ครบ"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <Button
            android:id="@+id/button_nextphase2_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#48D1CC"
            android:onClick="Onclick_nextphase2_1"
            android:text="@string/txt_next"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_button"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>