<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF0">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_pic_foot_downed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.administrator.editknee.picPhase1.PicPhase1_1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Step3_4"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Explain3_4"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal" />

        <ImageView
            android:layout_width="300dp"
            android:layout_height="350dp"
            android:layout_gravity="center"
            android:background="@drawable/nangkang2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/seevideo" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/txt_seeVideo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <Button
                android:onClick="StartP3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="4dp"
                android:text="@string/txt_start"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>