<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFF0">

    <LinearLayout
        android:id="@+id/activity_phase6_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Step6_6"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_title"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Explain6_6"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normaldown"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:layout_marginBottom="75dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_delete6_6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_delete"
                android:onClick="countDE"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/number6_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/txt_totalCountWalk"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_plus6_6"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_plus"
                android:onClick="countIN"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_note"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_normal" />

            <EditText
                android:id="@+id/editText_note6_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="กรอกสาเหตุที่ทำไม่ครบเวลา"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <Button
            android:id="@+id/button_nextphase6_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#48D1CC"
            android:onClick="Onclick_nextphase6_6"
            android:text="@string/txt_save"
            android:textColor="@android:color/white"
            android:textSize="@dimen/font_button"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>